--- a/src/assets/css/minh.css
+++ b/src/assets/css/minh.css
@@ -1,5 +1,5 @@
 .things-to-do-heading h4:after{
-    display: inline;
+    display: none;
 	content: "";
 	position: absolute;
 	background-color: #FFF;
@@ -60,4 +60,16 @@
 }
 .top-brand-name{
     display: inline;
+}
+.package-intro{
+    display: none;
+}
+.img-rounded{
+    position:absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 88;
+    top:70px;
+    right: 0px;
+    border-radius: 3px;
 }
