--- a/src/assets/css/nasa.css
+++ b/src/assets/css/nasa.css
@@ -17,9 +17,12 @@
 }
 #headernasa{
     width: 100%;
- 
     height: 400px;
     border: 1px solid red;
+}
+.imanasa{
+    width: 100%;
+    height: 100%;
 }
 .copyright{
     font-size: 20px;
@@ -34,11 +37,11 @@
 #contentnasa{
 
     width: 100%;
-    height: 200px;
+    height: 100%;
     border: 1px solid red;
 }
 #datetime{
- 
+    z-index: 9999;
     height: 50px;
     width: 150px;
     float: left;
@@ -58,6 +61,6 @@
     height: 50px;
     background-color: green;
     float: left;
-    padding: 20px;
+    padding: 2px;
     margin-top: 5px;
 }
